# RPSLS

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
rpsls/: backend.py  frontend.py  main.py  main_cli.py
rpsls/backend/: dataloader.py
rpsls/data/: rules.yml
tests/: test_backend.py  test_dataloader.py  test_main.py  test_main_cli.py
