[tool.poetry]
name = "rpsls"
version = "0.1.0"
description = ""
authors = ["Hasan A. Tanveer <devhatcoder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
